fix postman tests 1-3